--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #000003;
-	background-color: #8918AA;
+	color: #000001;
+	background-color: #09CD40;
 }
 
 #muse_css_mq
@@ -348,13 +348,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#ppu1760-5
+#pppu1760-5
 {
 	width: 0.01px;
 	margin-left: -50px;
 }
 
-#pu1760-5
+#ppu1760-5
 {
 	width: 0.01px;
 	margin: 25px -10000px -1px 130px;
@@ -371,6 +371,7 @@
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #u1760-2
@@ -378,10 +379,24 @@
 	color: #9E9E9E;
 }
 
+#u4522
+{
+	z-index: 100;
+	width: 68px;
+	min-height: 51px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1px;
+	left: 747px;
+}
+
 #pu3841-9
 {
 	width: 0.01px;
-	margin-top: 49px;
+	margin-top: 24px;
 }
 
 #u3841-9
@@ -431,7 +446,7 @@
 	border-width: 0px 0px 1px;
 }
 
-#page_position_content,#pu3750
+#page_position_content,#pu1760-5,#pu3750
 {
 	width: 0.01px;/* should not cover content below */
 }
