--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,7 +1,7 @@
 .version.about_me /* version checker */
 {
-	color: #000002;
-	background-color: #A42E39;
+	color: #0000E4;
+	background-color: #BF614C;
 }
 
 #muse_css_mq
@@ -651,7 +651,7 @@
 	color: #534741;
 }
 
-#u3395-3,#u3396-3,#u3397-3,#u3398-3,#u3399-3,#u3400-3
+#u3395-3,#u3396-3,#u3397-3,#u3398-3,#u3400-3
 {
 	color: #7F7F7F;
 }
