--- a/css/website-milenakiseleva_github_io.css
+++ b/css/website-milenakiseleva_github_io.css
@@ -1,7 +1,7 @@
 .version.website_milenakiseleva_github_io /* version checker */
 {
-	color: #0000E4;
-	background-color: #6DD17F;
+	color: #000015;
+	background-color: #132B64;
 }
 
 #muse_css_mq
@@ -30,7 +30,7 @@
 
 #u1670-7
 {
-	z-index: 15;
+	z-index: 18;
 	width: 600px;
 	min-height: 64px;
 	background-color: transparent;
@@ -56,7 +56,7 @@
 
 #u1770-6
 {
-	z-index: 23;
+	z-index: 26;
 	width: 600px;
 	min-height: 42px;
 	background-color: transparent;
@@ -74,7 +74,7 @@
 
 #u1672
 {
-	z-index: 22;
+	z-index: 25;
 	width: 600px;
 	height: 305px;
 	position: relative;
@@ -82,7 +82,7 @@
 	background-size: cover;
 }
 
-#u1669-13
+#u1669-16
 {
 	z-index: 2;
 	width: 600px;
