--- a/css/website-karolinaray_tk.css
+++ b/css/website-karolinaray_tk.css
@@ -1,7 +1,7 @@
 .version.website_karolinaray_tk /* version checker */
 {
-	color: #0000F8;
-	background-color: #5C01AE;
+	color: #00000B;
+	background-color: #B29B8B;
 }
 
 #muse_css_mq
@@ -89,7 +89,7 @@
 	position: relative;
 }
 
-#u1722-2,#u1722-5
+#u1722-2,#u1722-5,#u1722-10
 {
 	color: #FFFFFF;
 }
