--- a/css/website-milenakiseleva_blogspot_com.css
+++ b/css/website-milenakiseleva_blogspot_com.css
@@ -1,7 +1,7 @@
 .version.website_milenakiseleva_blogspot_com /* version checker */
 {
-	color: #0000ED;
-	background-color: #CF82F1;
+	color: #0000E1;
+	background-color: #37F696;
 }
 
 #muse_css_mq
@@ -84,7 +84,7 @@
 	position: relative;
 }
 
-#u1685-2,#u1685-5,#u1685-8
+#u1685-2,#u1685-5,#u1685-8,#u1685-13
 {
 	color: #FFFFFF;
 }
