--- a/css/website-milenakiseleva_github_io.css
+++ b/css/website-milenakiseleva_github_io.css
@@ -1,7 +1,7 @@
 .version.website_milenakiseleva_github_io /* version checker */
 {
-	color: #000015;
-	background-color: #132B64;
+	color: #0000E3;
+	background-color: #3D4066;
 }
 
 #muse_css_mq
@@ -95,7 +95,7 @@
 	position: relative;
 }
 
-#u1669-2,#u1669-5
+#u1669-2,#u1669-5,#u1669-10
 {
 	color: #FFFFFF;
 }
