--- a/css/website-milenarussianprincess_tk.css
+++ b/css/website-milenarussianprincess_tk.css
@@ -1,7 +1,7 @@
 .version.website_milenarussianprincess_tk /* version checker */
 {
-	color: #0000F0;
-	background-color: #9DE5E8;
+	color: #00001A;
+	background-color: #8A4EAF;
 }
 
 #muse_css_mq
@@ -30,7 +30,7 @@
 
 #u4344-6
 {
-	z-index: 17;
+	z-index: 18;
 	width: 600px;
 	min-height: 64px;
 	background-color: transparent;
@@ -56,7 +56,7 @@
 
 #u4342-6
 {
-	z-index: 24;
+	z-index: 25;
 	width: 600px;
 	min-height: 42px;
 	background-color: transparent;
@@ -74,7 +74,7 @@
 
 #u4345
 {
-	z-index: 23;
+	z-index: 24;
 	width: 600px;
 	height: 305px;
 	position: relative;
@@ -82,7 +82,7 @@
 	background-size: cover;
 }
 
-#u4343-15
+#u4343-16
 {
 	z-index: 2;
 	width: 600px;
@@ -95,7 +95,7 @@
 	position: relative;
 }
 
-#u4343-2,#u4343-5
+#u4343-2,#u4343-5,#u4343-10
 {
 	color: #FFFFFF;
 }
