--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,7 +1,7 @@
 .version.about_me /* version checker */
 {
-	color: #0000EA;
-	background-color: #E87A07;
+	color: #0000E9;
+	background-color: #8571F3;
 }
 
 #muse_css_mq
@@ -394,8 +394,8 @@
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #534741;
 	text-align: left;
+	color: #534741;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -492,8 +492,8 @@
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #534741;
 	text-align: left;
+	color: #534741;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -529,8 +529,8 @@
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #534741;
 	text-align: left;
+	color: #534741;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -566,8 +566,8 @@
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #534741;
 	text-align: left;
+	color: #534741;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -596,8 +596,8 @@
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #534741;
 	text-align: left;
+	color: #534741;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -637,8 +637,8 @@
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
-	color: #777777;
 	text-align: left;
+	color: #777777;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
